--- a/PaTS/PaTS/Views/ItemDetailPage.xaml
+++ b/PaTS/PaTS/Views/ItemDetailPage.xaml
@@ -5,13 +5,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="PaTS.Views.ItemDetailPage"
-             Title="{Binding Title}">
+             >
 
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small"/>
+        <Label Text="HEllo:" FontSize="Medium" />
+
     </StackLayout>
     
 </ContentPage>
